attributes.7: Comment out AC-Safety text under 'term'
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -611,15 +611,15 @@ The caller may use a single mutex for simplicity,
 or use one mutex per terminal,
 even if referenced by different file descriptors.
 
-Functions marked with
-.I term
-as an AC-Safety issue are supposed to
-restore terminal settings to their original state,
-after temporarily changing them, but they may fail to do so if canceled.
-
-.\" fixme: at least deferred cancellation should get it right, and would
-.\" obviate the restoring bit below, and the qualifier above.
-
+.\" Functions marked with
+.\" .I term
+.\" as an AC-Safety issue are supposed to
+.\" restore terminal settings to their original state,
+.\" after temporarily changing them, but they may fail to do so if canceled.
+.\" 
+.\" .\" fixme: at least deferred cancellation should get it right, and would
+.\" .\" obviate the restoring bit below, and the qualifier above.
+.\" 
 Besides the measures recommended to work around the
 MT-Safety and AS-Safety problem,
 in order to avert the cancellation problem,
