--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -620,14 +620,14 @@ even if referenced by different file descriptors.
 .\" .\" fixme: at least deferred cancellation should get it right, and would
 .\" .\" obviate the restoring bit below, and the qualifier above.
 .\" 
-Besides the measures recommended to work around the
-MT-Safety and AS-Safety problem,
-in order to avert the cancellation problem,
-disabling asynchronous cancellation
-.I and
-installing a cleanup handler to
-restore the terminal settings to the original state and to release the
-mutex are recommended.
+.\" Besides the measures recommended to work around the
+.\" MT-Safety and AS-Safety problem,
+.\" in order to avert the cancellation problem,
+.\" disabling asynchronous cancellation
+.\" .I and
+.\" installing a cleanup handler to
+.\" restore the terminal settings to the original state and to release the
+.\" mutex are recommended.
 .\"
 .\"
 .SS Other safety remarks
