--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -328,7 +328,7 @@ For some features that make functions unsafe to call in certain contexts,
 there are known ways to avoid the safety problem other than
 refraining from calling the function altogether.
 The keywords that follow refer to such features,
-and each of their definitions indicate
+and each of their definitions indicates
 how the whole program needs to be constrained in order to remove the
 safety problem indicated by the keyword.
 Only when all the reasons that
