standards.7: SEE ALSO: add attributes(7)
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/standards.7
+++ b/man7/standards.7
@@ -275,6 +275,7 @@ Further information can be found on the Austin Group web site,
 .UR http://www.opengroup.org\:/austin/
 .UE .
 .SH SEE ALSO
+.BR attributes (7),
 .BR feature_test_macros (7),
 .BR libc (7),
 .BR posixoptions (7)
