--- a/man7/man-pages.7
+++ b/man7/man-pages.7
@@ -358,27 +358,10 @@ as the base.
 .\" However, please include security information somewhere!
 .TP
 .B ATTRIBUTES
-A summary of various attributes of the function(s) documented on this page,
-broken into subsections.
-
-The following subsections are defined:
-.sp
-.RS
-.TP
-.B "Multithreading (see pthreads(7))"
-This subsection notes attributes relating to multithreaded applications:
-.RS
-.IP * 3
-Whether the function is thread-safe.
-.IP *
-Whether the function is a cancellation point.
-.IP *
-Whether the function is async-cancel-safe.
-.RE
-.IP
-Details of these attributes can be found in
-.BR pthreads (7).
-.RE
+A summary of various attributes of the function(s) documented on this page.
+See
+.BR attributes (7)
+for further details.
 .TP
 .B VERSIONS
 A brief summary of the Linux kernel or glibc versions where a
