attributes.7: Add SEE ALSO section
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -877,3 +877,5 @@ When all marks that render a function unsafe are
 adorned with such conditions,
 and none of the named conditions hold,
 then the function can be regarded as safe.
+.SH SEE ALSO
+.BR pthreads (7)
