attributes.7: Rewrite introduction
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -26,17 +26,15 @@ attributes \- POSIX safety concepts
 .SH DESCRIPTION
 .\"
 .\"
-.SS POSIX safety concepts
-This manual documents various safety properties of GNU C Library
-functions, in lines that follow their prototypes and look like:
+.IR Note :
+the text of this man page is based on the material taken from
+the "POSIX Safety Concepts" section of the GNU C Library manual.
+Further details on the topics described here can be found in that 
+manual.
 
-@sampsafety{@prelim{}@mtsafe{}@assafe{}@acsafe{}}
-
-The properties are assessed according to the criteria set forth in the
-POSIX standard for such safety contexts as
-Thread-Safety, Async-Signal-Safety and Async-Cancel-Safety.
-Intuitive definitions of these properties,
-attempting to capture the meaning of the standard definitions, follow.
+Various function manual pages include a section ATTRIBUTES
+that describes the safety of calling the function in various contexts.
+This section annotates functions with the following safety markings:
 .TP
 .I MT-Safe
 .I MT-Safe
