attributes.7: Remove mention os AS-Unsafe
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -506,7 +506,7 @@ synchronization.
 Unlike
 .IR race ,
 which causes both readers and
-writers of internal objects to be regarded as MT-Unsafe and AS-Unsafe,
+writers of internal objects to be regarded as MT-Unsafe, \" and AS-Unsafe,
 this mark is applied to writers only.
 Writers remain \" equally
 MT-Unsafe \" and AS-Unsafe
