attributes.7: Remove AS-Unsafe text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -590,9 +590,9 @@ this creates a window in which changes made by other threads are lost.
 Thus, functions marked with
 .I term
 are MT-Unsafe.
-The same window enables changes made by asynchronous signals to be lost.
-These functions are also AS-Unsafe,
-but the corresponding mark is omitted as redundant.
+.\" The same window enables changes made by asynchronous signals to be lost.
+.\" These functions are also AS-Unsafe,
+.\" but the corresponding mark is omitted as redundant.
 
 It is thus advisable for applications using the terminal to avoid
 concurrent and reentrant interactions with it,
