attributes.7: Rnmove some AS-Unsafe pieces
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -645,7 +645,8 @@ called concurrently with locale changes may
 behave in ways that do not correspond to any of the locales active
 during their execution, but an unpredictable mix thereof.
 
-We do not mark these functions as MT-Unsafe or AS-Unsafe, however,
+We do not mark these functions as MT-Unsafe, \" or AS-Unsafe,
+however,
 because functions that modify the locale object are marked with
 .I const:locale
 and regarded as unsafe.
@@ -677,7 +678,8 @@ environment with
 or similar, without any guards to ensure
 safety in the presence of concurrent modifications.
 
-We do not mark these functions as MT-Unsafe or AS-Unsafe, however,
+We do not mark these functions as MT-Unsafe \" or AS-Unsafe,
+however,
 because functions that modify the environment are all marked with
 .I const:env
 and regarded as unsafe.
@@ -715,7 +717,8 @@ GNU C Library
 internal data structure without any guards to ensure
 safety in the presence of concurrent modifications.
 
-We do not mark these functions as MT-Unsafe or AS-Unsafe, however,
+We do not mark these functions as MT-Unsafe \" or AS-Unsafe,
+however,
 because functions that modify the this data structure are all marked with
 .I const:sigintr
 and regarded as unsafe.
@@ -795,8 +798,9 @@ change the current working directory during their execution,
 which may cause relative pathnames to be resolved in unexpected ways in
 other threads or within asynchronous signal or cancellation handlers.
 
-This is not enough of a reason to mark so-marked functions as MT-Unsafe or
-AS-Unsafe, but when this behavior is optional (e.g.,
+This is not enough of a reason to mark so-marked functions as MT-Unsafe
+\" or AS-Unsafe,
+but when this behavior is optional (e.g.,
 .BR nftw (3)
 with
 .BR FTW_CHDIR ),
