lseek64.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/lseek64.3
+++ b/man3/lseek64.3
@@ -154,10 +154,17 @@ The prototype is:
 For more details, see
 .BR llseek (2).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR lseek64 ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH SEE ALSO
 .BR llseek (2),
 .BR lseek (2)
