--- a/man3/logb.3
+++ b/man3/logb.3
@@ -141,13 +141,19 @@ These functions do not set
 .\" function occurs in 4.3BSD.
 .\" see IEEE.3 in the 4.3BSD manual
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR logb (),
 .BR logbf (),
-and
 .BR logbl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH SEE ALSO
