localeconv.3: Reformat and Modify thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/localeconv.3
+++ b/man3/localeconv.3
@@ -63,11 +63,17 @@ The
 .BR localeconv ()
 function always succeeds.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR localeconv ()
-function is not thread-safe, since it returns a pointer to a structure which
-might be overwritten by subsequent calls.
+T}	Thread safety	MT-Unsafe race:localeconv locale
+.TE
 .SH CONFORMING TO
 C89, C99.
 .SH BUGS
