--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -1,4 +1,5 @@
-.\" Copyright (c) 2014, Red Hat, Inc.
+.\" Copyright (c) 2014, Red Hat, Inc
+.\"     Written by Alexandre Oliva <aoliva@redhat.com>
 .\"
 .\" %%%LICENSE_START(GPLv2+_DOC_FULL)
 .\" This is free documentation; you can redistribute it and/or
