attributes.7: Fixes from Peng Haitao
Reviewed-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -679,7 +679,7 @@ environment with
 or similar, without any guards to ensure
 safety in the presence of concurrent modifications.
 
-We do not mark these functions as MT-Unsafe \" or AS-Unsafe,
+We do not mark these functions as MT-Unsafe, \" or AS-Unsafe,
 however,
 because functions that modify the environment are all marked with
 .I const:env
@@ -718,9 +718,9 @@ GNU C Library
 internal data structure without any guards to ensure
 safety in the presence of concurrent modifications.
 
-We do not mark these functions as MT-Unsafe \" or AS-Unsafe,
+We do not mark these functions as MT-Unsafe, \" or AS-Unsafe,
 however,
-because functions that modify the this data structure are all marked with
+because functions that modify this data structure are all marked with
 .I const:sigintr
 and regarded as unsafe.
 Being unsafe,
@@ -799,8 +799,8 @@ change the current working directory during their execution,
 which may cause relative pathnames to be resolved in unexpected ways in
 other threads or within asynchronous signal or cancellation handlers.
 
-This is not enough of a reason to mark so-marked functions as MT-Unsafe
-\" or AS-Unsafe,
+This is not enough of a reason to mark so-marked functions as MT-Unsafe,
+.\" or AS-Unsafe,
 but when this behavior is optional (e.g.,
 .BR nftw (3)
 with
@@ -867,7 +867,7 @@ global variables or even the underlying kernel evaluates evaluates to true.
 .\" applies when the underlying kernel is the HURD,
 .\" or when it is neither Linux nor a BSD kernel, respectively.
 For example,
-.I !ps
+.I /!ps
 and
 .I /one_per_line
 indicate the preceding marker only applies when argument
