fenv.3: tfix in thread-safety information
fegetexceptflag() should be modified to feraiseexcept().

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fenv.3
+++ b/man3/fenv.3
@@ -270,12 +270,12 @@ For an explanation of the terms used in this section, see
 .TS
 allbox;
 lb lb lb
-lw37 l l.
+lw35 l l.
 Interface	Attribute	Value
 T{
 .BR feclearexcept (),
 .BR fegetexceptflag (),
-.BR fegetexceptflag (),
+.BR feraiseexcept (),
 .BR fesetexceptflag (),
 .BR fetestexcept (),
 .BR fegetround (),
