seccomp.2: Minor rewording
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -117,12 +117,12 @@ in
 This requirement ensures that filter programs cannot be applied to child
 processes with greater privileges than the process that installed them.
 
-Additionally, if
+If
 .BR prctl (2)
 or
 .BR seccomp (2)
-is allowed by the attached filter, additional filters may be layered on
-which will increase evaluation time, but allow for further reduction of
+is allowed by the attached filter, further filters may be added.
+This will increase evaluation time, but allow for further reduction of
 the attack surface during execution of a process.
 
 The
