seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -145,6 +145,9 @@ are:
 .BR SECCOMP_FILTER_FLAG_TSYNC
 When adding a new filter, synchronize all other threads of the current
 process to the same seccomp filter tree.
+.\" FIXME Nowhere in this page is the term "filter tree" defined.
+.\" Is it: "the set of filters attached to a thread"?
+.\" If yes, the page should say so.
 If any thread cannot do this,
 the call will not attach the new seccomp filter,
 and will fail, returning the first thread ID found that cannot synchronize.
