seccomp.2: srcfix: Added FIXMEs
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -88,6 +88,8 @@ If the filter is invalid, the call will fail, returning
 in
 .IR errno .
 
+.\" FIXME I (mtk) reworded the following paragraph substantially.
+.\" Please check it.
 If
 .BR fork (2)
 or
@@ -100,6 +102,8 @@ is allowed by the filter,
 the filters and constraints on permitted system calls are preserved across an
 .BR execve (2).
 
+.\" FIXME I (mtk) reworded the following paragraph substantially.
+.\" Please check it.
 In order to use the
 .BR SECCOMP_SET_MODE_FILTER
 operation, either the caller must have the
