seccomp.2: Reword text on seccomp filter return values
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -202,7 +202,7 @@ struct seccomp_data {
 .fi
 .in
 
-A seccomp filter may return any of the following values.
+A seccomp filter returns one of the values listed below.
 If multiple filters exist,
 the return value for the evaluation of a given system
 call will always use the highest precedent value.
@@ -210,7 +210,7 @@ call will always use the highest precedent value.
 .BR SECCOMP_RET_KILL
 will always take precedence.)
 
-In precedence order, they are:
+In precedence order, the values that may be returned by a seccomp filter are:
 .TP
 .BR SECCOMP_RET_KILL
 Results in the task exiting immediately without executing the
