--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -210,11 +210,11 @@ call will always use the highest precedent value.
 .BR SECCOMP_RET_KILL
 will always take precedence.)
 
-In precedence order, the values that may be returned by a seccomp filter are:
+In decreasing order order of precedence,
+the values that may be returned by a seccomp filter are:
 .TP
 .BR SECCOMP_RET_KILL
-Results in the task exiting immediately without executing the
-system call.
+Results in the task exiting immediately without executing the system call.
 The exit status of the task (status & 0x7f) will be
 .BR SIGSYS ,
 not
