seccomp.2: Reword text describing killing via SIGSYS
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -215,10 +215,11 @@ the values that may be returned by a seccomp filter are:
 .TP
 .BR SECCOMP_RET_KILL
 Results in the task exiting immediately without executing the system call.
-The exit status of the task (status & 0x7f) will be
-.BR SIGSYS ,
-not
-.BR SIGKILL .
+The task terminates as though killed by a
+.B SIGSYS
+signal
+.RI ( not
+.BR SIGKILL ).
 .TP
 .BR SECCOMP_RET_TRAP
 Results in the kernel sending a
