seccomp.2: Minor wording fix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -245,10 +245,11 @@ portion of the return value will be passed as
 .IR si_errno .
 
 .BR SIGSYS
-triggered by seccomp will have a
+triggered by seccomp will have a the value
+.BR SYS_SECCOMP
+in the
 .IR si_code
-of
-.BR SYS_SECCOMP .
+field.
 .TP
 .BR SECCOMP_RET_ERRNO
 Results in the lower 16-bits of the return value being passed
