seccomp.2: Reword text describing ENOSYS failure from SECCOMP_RET_TRACE
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -260,9 +260,13 @@ without executing the system call.
 .BR SECCOMP_RET_TRACE
 When returned, this value will cause the kernel to attempt to
 notify a ptrace()-based tracer prior to executing the system call.
+.\" FIXME I (mtk) reworded the following sentence substantially.
+.\" Please check it.
 If there is no tracer present,
-.BR ENOSYS
-is returned to userland and the system call is not executed.
+the system call is not executed and returns a failure status with
+.I errno
+set to
+.BR ENOSYS .
 
 A tracer will be notified if it requests
 .BR PTRACE_O_TRACESECCOMP
