--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -126,7 +126,7 @@ If
 or
 .BR seccomp (2)
 is allowed by the attached filter, further filters may be added.
-This will increase evaluation time, but allow for further reduction of
+This will increase evaluation time, but allows for further reduction of
 the attack surface during execution of a process.
 
 The
