seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -43,6 +43,9 @@ The
 .BR seccomp ()
 system call operates on the Secure Computing (seccomp) state of the
 calling process.
+.\" FIXME: This page various uses the terms "process', "thread" and "task".
+.\" Probably only one of these (not "task"!) should be used in all
+.\" cases. I suspect it should be "thread".
 
 Currently, Linux supports the following
 .IR operation
