seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -122,6 +122,7 @@ operation will fail and return
 in
 .IR errno .
 This requirement ensures that filter programs cannot be applied to child
+.\" FIXME What does "installed" in the following line mean?
 processes with greater privileges than the process that installed them.
 
 If
