--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -154,8 +154,8 @@ are:
 When adding a new filter, synchronize all other threads of the current
 process to the same seccomp filter tree.
 .\" FIXME Nowhere in this page is the term "filter tree" defined.
+.\" There should be a defintion somewhere.
 .\" Is it: "the set of filters attached to a thread"?
-.\" If yes, the page should say so.
 If any thread cannot do this,
 the call will not attach the new seccomp filter,
 and will fail, returning the first thread ID found that cannot synchronize.
