seccomp.2: SEE ALSO: add kernel source file Documentation/networking/filter.txt
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -445,3 +445,6 @@ main(int argc, char **argv)
 .BR ptrace (2),
 .BR signal (7),
 .BR socket (7)
+.sp
+The kernel source file
+.IR Documentation/networking/filter.txt .
