--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -356,7 +356,7 @@ This system call is a nonstandard Linux extension.
 .BR seccomp ()
 provides a superset of the functionality provided by the
 .BR prctl (2)
-.IR PR_SET_SECCOMP
+.BR PR_SET_SECCOMP
 operation (which does not support
 .IR flags ).
 .SH EXAMPLE
