--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -209,7 +209,7 @@ struct seccomp_data {
 A seccomp filter returns one of the values listed below.
 If multiple filters exist,
 the return value for the evaluation of a given system
-call will always use the highest precedent value.
+call will always use the value with the highest precedence.
 (For example,
 .BR SECCOMP_RET_KILL
 will always take precedence.)
