seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -446,5 +446,6 @@ main(int argc, char **argv)
 .BR signal (7),
 .BR socket (7)
 .sp
+.\" FIXME: Is the following the best source of info on the BPF language?
 The kernel source file
 .IR Documentation/networking/filter.txt .
