--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -154,7 +154,7 @@ are:
 When adding a new filter, synchronize all other threads of the current
 process to the same seccomp filter tree.
 .\" FIXME Nowhere in this page is the term "filter tree" defined.
-.\" There should be a defintion somewhere.
+.\" There should be a definition somewhere.
 .\" Is it: "the set of filters attached to a thread"?
 If any thread cannot do this,
 the call will not attach the new seccomp filter,
@@ -396,7 +396,7 @@ install_filter(int syscall, int arch, int error)
         /* Destination of syscall mismatch: allow other syscalls */
         BPF_STMT(BPF_RET + BPF_K, SECCOMP_RET_ALLOW),
 
-        /* Destination of arch mismatch: kill process. */
+        /* Destination of arch mismatch: kill process */
         BPF_STMT(BPF_RET + BPF_K, SECCOMP_RET_KILL),
     };
 
