seccomp.2: srcfix: add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -33,6 +33,8 @@ seccomp \- operate on Secure Computing state of the process
 .B #include <linux/filter.h>
 .B #include <linux/audit.h>
 .B #include <linux/signal.h>
+.\" FIXME Is sys/ptrace.h really required? It is not used in
+.\"       the example program below.
 .B #include <sys/ptrace.h>
 
 .BI "int seccomp(unsigned int " operation ", unsigned int " flags \
