seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -208,10 +208,23 @@ struct seccomp_data {
 .fi
 .in
 
+.\" FIXME I find the next piece a little hard to understand, so,
+.\"       some questions:
+.\"       * If there are multiple filters, in what order are they executed?
+.\"         (The man page should probably detail the answer to this question.)
+.\"       * If there are multiple filters, are they all always executed?
+.\"         I assume not, but the notion that 
+.\"             "the return value for the evaluation of a given system call
+.\"              will always use the value with the highest precedence"
+.\"         implies that even that if one filter generates (say)
+.\"         SECCOMP_RET_ERRNO, then further filters may still be executed,
+.\"         including one that generates (say) the "higher priority"
+.\"         SECCOMP_RET_KILL condition.
+.\"       Can you clarify the above?
 A seccomp filter returns one of the values listed below.
 If multiple filters exist,
-the return value for the evaluation of a given system
-call will always use the value with the highest precedence.
+the return value for the evaluation of a given system call
+will always use the value with the highest precedence.
 (For example,
 .BR SECCOMP_RET_KILL
 will always take precedence.)
